# UraniumCompute

./: .gitignore  .gitmodules  BUILDING.md  Doxyfile  README.md
.github/workflows/: cmake.yml
ManagedSource/UraniumCompute/: UraniumCompute.sln
ManagedSource/UraniumCompute/Array2DSample/: Array2DSample.csproj  CpuFractalGenerator.cs  FractalPlotFacts.cs  GpuFractalGenerator.cs  IFractalGenerator.cs  Program.cs
ManagedSource/UraniumCompute/ArrayTransform/: ArrayTransform.csproj  Program.cs
ManagedSource/UraniumCompute/CompilationSample/: CompilationSample.csproj  Program.cs
ManagedSource/UraniumCompute/GeneratorSample/: GeneratorSample.csproj  Program.cs
ManagedSource/UraniumCompute/GeneratorSample/Properties/: launchSettings.json
ManagedSource/UraniumCompute/PipelinesMemorySample/: PipelinesMemorySample.csproj  Program.cs
ManagedSource/UraniumCompute/PipelinesSample/: AddArraysJob.cs  PipelinesSample.csproj  Program.cs
ManagedSource/UraniumCompute/SampleProject/: Program.cs  SampleProject.csproj
ManagedSource/UraniumCompute/TensorSample/: Program.cs  TensorSample.csproj
ManagedSource/UraniumCompute/Tests/: Tests.csproj  UnitTest1.cs
ManagedSource/UraniumCompute/Tests/CompilerTests/: CompilerTests.csproj  DecompilerTests.Batch.cs  DecompilerTests.ControlFlow.cs  DecompilerTests.Functions.cs  DecompilerTests.Instrinsics.cs  DecompilerTests.Structs.cs  DecompilerTests.cs
ManagedSource/UraniumCompute/Tests/Containers/: NativeArrayTests.cs
ManagedSource/UraniumCompute/Tests/ContainersTests/: ContainersTests.csproj  NativeArrayTests.cs
ManagedSource/UraniumCompute/Tests/MathTests/: MathTests.csproj  Matrix2x2IntTests.cs  Matrix2x2Tests.cs  Matrix2x2UintTests.cs  Matrix3x3IntTests.cs  Matrix3x3Tests.cs  Matrix3x3UintTests.cs  Matrix4x4IntTests.cs  Matrix4x4UintTests.cs  RandomTests.cs  Vector2IntTests.cs  Vector2UintTests.cs  Vector3IntTests.cs  Vector3UintTests.cs  Vector4IntTests.cs  Vector4UintTests.cs
ManagedSource/UraniumCompute/Tests/PipelineTests/: PipelineTests.csproj
ManagedSource/UraniumCompute/UraniumCompute/: UraniumCompute.csproj
ManagedSource/UraniumCompute/UraniumCompute.Backend.Cpu/: Class1.cs
ManagedSource/UraniumCompute/UraniumCompute.Backend.Vulkan/: Class1.cs
ManagedSource/UraniumCompute/UraniumCompute.Common/: DeviceTypeAttribute.cs  UraniumCompute.Common.csproj  Vector2Int.cs  Vector2Uint.cs  Vector3Int.cs  Vector3Uint.cs  Vector4Int.cs  Vector4Uint.cs
ManagedSource/UraniumCompute/UraniumCompute.Common/Math/: GpuRandom.cs  Matrix2x2.cs  Matrix2x2Int.cs  Matrix2x2Uint.cs  Matrix3x3.cs  Matrix3x3Int.cs  Matrix3x3Uint.cs  Matrix4x4Int.cs  Matrix4x4Uint.cs  Vector2Int.cs  Vector2Uint.cs  Vector3Int.cs  Vector3Uint.cs  Vector4Int.cs  Vector4Uint.cs
ManagedSource/UraniumCompute/UraniumCompute.Compiler/: Class1.cs  UraniumCompute.Compiler.csproj
ManagedSource/UraniumCompute/UraniumCompute.Compiler/CodeGen/: HlslCodeGenerator.cs  ICodeGenerator.cs
ManagedSource/UraniumCompute/UraniumCompute.Generator/: CSharpToHlslTranslator.cs  CompiledMethod.cs  SourceGenerator.cs  TranslatedMethod.cs  UraniumCompute.Generator.csproj
ManagedSource/UraniumCompute/UraniumCompute.Generator.Attributes/: CompileKernelAttribute.cs  UraniumCompute.Generator.Attributes.csproj
ManagedSource/UraniumCompute/UraniumCompute.Tensors/: Tensor.cs  UraniumCompute.Tensors.csproj
NativeSource/: .clang-format  CMakeLists.txt
NativeSource/Samples/: CMakeLists.txt
NativeSource/Samples/ArrayTransformation/: CMakeLists.txt  main.cpp
NativeSource/Samples/MemoryBarriers/: CMakeLists.txt  main.cpp
NativeSource/Samples/SampleProject/: CMakeLists.txt  main.cpp
NativeSource/UraniumCompute/: CMakeLists.txt
NativeSource/UraniumCompute/Bindings/Acceleration/: DeviceFactory.cpp
NativeSource/UraniumCompute/Bindings/Backend/: Buffer.cpp  CommandList.cpp  ComputeDevice.cpp  DeviceMemory.cpp  DeviceObject.cpp  Fence.cpp  Kernel.cpp  ResourceBinding.cpp
NativeSource/UraniumCompute/Bindings/Compilation/: KernelCompiler.cpp
NativeSource/UraniumCompute/Bindings/Containers/: HeapArray.cpp
NativeSource/UraniumCompute/Bindings/Memory/: Object.cpp
NativeSource/UraniumCompute/Tests/: CMakeLists.txt  main.cpp
NativeSource/UraniumCompute/Tests/Common/: Common.h
NativeSource/UraniumCompute/Tests/Containers/: ArraySlice.cpp  HeapArray.cpp
NativeSource/UraniumCompute/Tests/Memory/: Ptr.cpp
NativeSource/UraniumCompute/UnCompute/Acceleration/: AdapterInfo.h  DeviceFactory.cpp  DeviceFactory.h  IDeviceFactory.h
NativeSource/UraniumCompute/UnCompute/Backend/: BaseTypes.h  BufferBase.cpp  BufferBase.h  CommandListBase.cpp  CommandListBase.h  DeviceMemoryBase.cpp  DeviceMemoryBase.h  DeviceObjectBase.h  FenceBase.cpp  FenceBase.h  IBuffer.h  ICommandList.h  IComputeDevice.h  IDeviceMemory.h  IDeviceObject.h  IFence.h  IKernel.h  IResourceBinding.h  KernelBase.cpp  KernelBase.h  MemoryKindFlags.h  ResourceBindingBase.cpp  ResourceBindingBase.h
NativeSource/UraniumCompute/UnCompute/Base/: Base.h  Byte.h  CompilerTraits.h  Flags.h  Logger.h  Platform.h  PlatformInclude.h  PlatformTraits.h  ResultCode.h
NativeSource/UraniumCompute/UnCompute/Compilation/: IKernelCompiler.h  KernelCompiler.cpp  KernelCompiler.h
NativeSource/UraniumCompute/UnCompute/Containers/: ArraySlice.h  HeapArray.h
NativeSource/UraniumCompute/UnCompute/Memory/: IAllocator.h  Memory.h  Object.h  Ptr.h  ReferenceCounter.h  SystemAllocator.cpp  SystemAllocator.h
NativeSource/UraniumCompute/UnCompute/Utils/: DynamicLibrary.h  MemoryUtils.h
NativeSource/UraniumCompute/UnCompute/VulkanBackend/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanComputeDevice.cpp  VulkanComputeDevice.h  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.h  VulkanDeviceFactory.cpp  VulkanDeviceFactory.h  VulkanDeviceMemory.cpp  VulkanDeviceMemory.h  VulkanFence.cpp  VulkanFence.h  VulkanInclude.h  VulkanInstance.cpp  VulkanInstance.h  VulkanKernel.cpp  VulkanKernel.h  VulkanResourceBinding.cpp  VulkanResourceBinding.h
NativeSource/cmake/: Config.cmake
(+161 files in other folders)
